--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/react": "^16.7.21",
     "@types/react-bootstrap": "^0.32.15",
     "@types/react-dom": "^16.0.11",
+    "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.7.0",
