--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/d3": "^5.7.2",
     "@types/jest": "^23.3.13",
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.21",
     "@types/react-bootstrap": "^0.32.15",
     "@types/react-dom": "^16.0.11",
+    "d3": "^5.9.2",
     "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-bootstrap": "^0.32.4",
